# AP-server

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
todo/: settings.py  urls.py
